@@ -321,6 +321,11 @@ verilog/parser_bugs.v:378: PARAMPIN  'T_DATA' 'T_DATA' '1'
 verilog/parser_bugs.v:379: PIN  'data' 'data' '1'
 verilog/parser_bugs.v:379: ENDCELL  ''
 verilog/parser_bugs.v:380: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:382: MODULE  'module' 'bugmodportcomma' undef '0'
+verilog/parser_bugs.v:382: PORT  'a' 'module' '' '' '' '1'
+verilog/parser_bugs.v:383: VAR  'port' 'a' 'module' '' '' '' ''
+verilog/parser_bugs.v:383: PORT  'a' 'module' 'input' '' '' '0'
+verilog/parser_bugs.v:384: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
